--- a/src/main/docker/docker-registry.yml
+++ b/src/main/docker/docker-registry.yml
@@ -4,7 +4,7 @@ services:
   registry:
     image: registry:2
     ports:
-      - 443:443
+      - 443:5000
     restart: always  
     environment:
         # uncomment to enable basic auth
@@ -13,12 +13,12 @@ services:
         #- REGISTRY_AUTH_HTPASSWD_REALM=Registry Realm
 
         # uncomment to enable tls with a certificate
-        - REGISTRY_HTTP_TLS_CERTIFICATE=/certs/domain.crt
-        - REGISTRY_HTTP_TLS_KEY=/certs/domain.key
+        #- REGISTRY_HTTP_TLS_CERTIFICATE=/certs/domain.crt
+        #- REGISTRY_HTTP_TLS_KEY=/certs/domain.key
 
         # uncomment to enable tls with letsencrypt
-        #- REGISTRY_HTTP_TLS_LETSENCRYPT_CACHEFILE=/path/to/cache-file
-        #- REGISTRY_HTTP_TLS_LETSENCRYPT_EMAIL=mail@example.com
+        - REGISTRY_HTTP_TLS_LETSENCRYPT_CACHEFILE=/home/adminis/LETSENCRYPT_CACHEFILE/cache-file
+        - REGISTRY_HTTP_TLS_LETSENCRYPT_EMAIL=yogendra.thakur@mindtree.com
     volumes:
         # uncomment to enable basic auth
         # you will need to generate a `htpasswd` file using :
@@ -26,15 +26,15 @@ services:
         #- ~/volumes/registry/htpasswd:/auth/htpasswd:ro
 
         # uncomment to enable tls
-        - /certs:/certs
+        #- /certs:/certs
 
         # uncomment to persist data to a volume
-        #- ~/volumes/registry/data:/var/lib/registry
+        - ~/volumes/registry/data:/var/lib/registry
   registry-ui:
     image: konradkleine/docker-registry-frontend:v2
     environment:
       - ENV_DOCKER_REGISTRY_HOST=lab4.southeastasia.cloudapp.azure.com
-      - ENV_DOCKER_REGISTRY_PORT=443
+      - ENV_DOCKER_REGISTRY_PORT=5000
       #- ENV_DOCKER_REGISTRY_USE_SSL=1
     ports:
       - 5080:80
