--- a/src/main/docker/docker-registry.yml
+++ b/src/main/docker/docker-registry.yml
@@ -33,10 +33,11 @@ services:
         - /letsencrypt/cachefile:/letsencrypt/cachefile
   registry-ui:
     image: konradkleine/docker-registry-frontend:v2
+    restart: always
     environment:
-      - ENV_DOCKER_REGISTRY_HOST=lab4.southeastasia.cloudapp.azure.com
+      - ENV_DOCKER_REGISTRY_HOST=registry
       - ENV_DOCKER_REGISTRY_PORT=5000
-      #- ENV_DOCKER_REGISTRY_USE_SSL=1
+      - ENV_DOCKER_REGISTRY_USE_SSL=1
     ports:
-      - 5080:80
+      - 9001:80
 
