--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
     jhipstersampleapplication-app:
-        image: jhipstersampleapplication
+        image: lab4.southeastasia.cloudapp.azure.com/sampleapplication
         environment:
             - SPRING_PROFILES_ACTIVE=prod,swagger
             - SPRING_DATASOURCE_URL=jdbc:mysql://jhipstersampleapplication-mysql:3306/jhipstersampleapplication?useUnicode=true&characterEncoding=utf8&useSSL=false
-            - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
+            - JHIPSTER_SLEEP=50 # gives time for the database to boot before the application
         ports:
-            - 8080:8080
+            - 80:8080
     jhipstersampleapplication-mysql:
         extends:
             file: mysql.yml
