--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -26,8 +26,8 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:mem:jhipstersampleapplication;DB_CLOSE_DELAY=-1
-        username: jhipsterSampleApplication
+        url: jdbc:mysql://localhost:3306/sampleapplication?useUnicode=true&characterEncoding=utf8&useSSL=false
+        username: root
         password:
     h2:
         console:
